[project]
name = "timetable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gtfs-kit>=8.1.2",
    "pydantic-settings[yaml]>=2.7.0",
    "pydantic>=2.10.4",
    "typer>=0.15.1",
    "tqdm>=4.67.1",
    "requests>=2.32.3",
]
